--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Fairy tales -- Denmark'
 - !lcsh 'Children''s stories, Danish -- Translations into French'
 - !lcc 'PZ'
+- GITenberg
 title: Contes merveilleux, Tome II
 url: http://www.gutenberg.org/ebooks/18245
